glassy login page

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     width: 100%;
     background-color: #F5DDD9;
 
-    background-image: url(./Saly-10.png);
+    background-image: url(./enjoy.png);
     background-position: right bottom;
     background-size: contain;
     background-repeat: no-repeat;
